--- a/src/styles.css
+++ b/src/styles.css
@@ -284,7 +284,7 @@ button,
 .button {
   color: var(--custom-color);
   border: var(--custom-border);
-  background-color: var(--custom-bg-color);
+  background-color: var(--custom-panel-color);
   display: inline-block;
   text-align: center;
   border-radius: var(--custom-border-radius);
@@ -315,6 +315,9 @@ button.primary,
   border-radius: var(--custom-border-radius);
   overflow: hidden;
   max-width: 100%;
+  width: 150px;
+  height: 150px;
+  background-size: cover
 }
 
 .avatar.image {
@@ -422,4 +425,22 @@ button.primary,
   width: 17px;
   animation: spin 1s linear infinite;
   filter: invert(1);
-}/* You can add global styles to this file, and also import other style files */
+}
+
+/* You can add global styles to this file, and also import other style files */
+
+
+.green {
+  background-color: #23d763;
+}
+
+.confirmation {
+  color: #23d763;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
